--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.9",
+        "@babel/plugin-syntax-jsx": "^7.23.3",
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-react": "^7.23.3",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "create-react-app": "^5.0.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.0"
     }
 }
